<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OnRoad</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="sample_content">Sample of dragging the content.\nThe menu consists of a ListView, for which the
        active position is saved through configuration changes.\nAdditionally, if the menu is open, a back press will
        close it.
    </string>

    <!-- home menu text -->
    <string name="home_menu_go">旅行</string>
    <string name="home_menu_discover">发现</string>
    <string name="home_menu_seek">搜索</string>
    <string name="home_menu_usage">如何使用This</string>
    <string name="home_menu_rentout">个人</string>
    <string name="home_menu_wish_list_btn">心愿单</string>
    <string name="home_menu_why_pub">成长烙印</string>
    <string name="home_menu_setting">设置</string>
    <string name="home_menu_help">帮助</string>
    <string name="home_menu_reginOrlogin">注册或登录</string>
    
    
    <!-- 精选页 --> 
    <string name="home_menu_handpick">发现</string>
    <string name="home_activity_handpick_description_1">当前主题共有</string>
    <string name="home_activity_handpick_description_2">个活动</string>
    
    
   <!--  用户 主页 -->
    <string name="home_user_home_ab_title">账号</string>
    <string name="home_user_home_look_userInfo">查看个人资料</string>
    <string name="home_user_home_user_setting">设置</string>
    <string name="home_user_home_like_this">喜欢走起？</string>
    <string name="home_user_home_how_to_use">如何使用</string>
    <string name="home_user_home_service_item">服务条款</string>
    <string name="home_user_home_privacy_policy">隐私政策</string>
    <string name="home_user_home_logout">退出</string>
    
   <!--  引导页 -->
    <string name="guide_btn_text">立即体验</string>
    <string name="guide_title_first">向世界各地的当地房东租住独一无二的房源</string>
    <string name="guide_title_second">找到最理想的住处</string>
    <string name="guide_title_third">轻松完成预定手续</string>
    <string name="guide_title_fourth">即日启程</string>

    <string name="guide_content_first">" "</string>
    <string name="guide_content_second">按地点、房源类型和更多筛选条件进行搜索。阅读评价，看看旅行者们是如何评价各位房东及房源。</string>
    <string name="guide_content_third">联系房东、确认旅行日期、支付一切都能通过Airbnb值得醒来的服务完成。</string>
    <string name="guide_content_fourth">您可以在旅途中随时随地了解您的房东、让他们为您提供一些当地建议，并查看您的行程单。</string>
    
   <!-- 	注册登陆 -->
    <string name="regin_text">注册</string>
    <string name="login_text">登录</string>
    <string name="skip_text">跳过</string>
    
    <string name="regin_login_title">登录或注册账号</string>
    <string name="regin_login_service_terms">服务条款</string>
    <string name="regin_login_privacy_policy">隐私政策</string>
    <string name="regin_login_sina">微博</string>
    <string name="regin_login_facebook">Facebook</string>
    <string name="regin_login_google">谷歌</string>
    <string name="regin_login_display_more">显示更多</string>
    <string name="regin_login_atuth_title">授权OnRoad</string>
    
   	<!--  发现页 -->
    <string name="discover_input_hint_text">想去哪里？</string>
    <string name="discover_fragment_current_text">当前位置</string>
    <string name="discover_fragment_begin_search">开始搜索</string>
    <string name="discover_fragment_guid_text_one">年幼时，父母是我们的领路人</string>
    <string name="discover_fragment_guid_text_two">现在，轮到我们来领路了</string>
    <string name="discover_fragment_guid_text_three">开始出发吧！</string>
    
    <!--  like this -->
    <string name="like_this_title_text">喜欢我们？那就告诉全世界吧！</string>
    <string name="like_this_OK_text">好！</string>
    <string name="like_this_NO_text">暂时不要</string>
    
    <!-- theme list -->
    <string name="theme_list_price_text">￥</string>
    <string name="theme_list_ab_title_text">本周精选</string>
    <string name="theme_list_description_text">Flat near Chaamps-Elysees</string>
    <string name="theme_list_evaluate_text">公用空间·4评价 - Paris</string>
    
    <!-- activity content -->
    <string name="activity_content_position_symbol">/</string>
    <string name="activity_content_evaluate_total">查看所有评价</string>
    <string name="activity_content_description_title">描述</string>
    <string name="activity_content_description_more">阅读更多</string>
    <string name="activity_content_form">类型</string>
    <string name="activity_content_fit_age">适合年龄</string>
    <string name="activity_content_useful_life">有效期</string>
    <string name="activity_content_open_time">开放时间</string>
    <string name="activity_content_price">费用</string>
    <string name="activity_content_phone_number">联系电话：</string>
    <string name="activity_content_close_activity">相似去处</string>
    
    
    <!-- wish list activity -->
    <string name="wish_list_activity_start_search">开始搜索</string>
    <string name="wish_list_activity_content_text_1">探索无数童话般的目的地，为了孩子</string>
    <string name="wish_list_activity_content_text_2">添加最合适他（她）的地方</string>
    <string name="wish_list_activity_create_list">创建心愿单</string>
    
</resources>
