<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="#87F5FFFA">
    
    <LinearLayout 
        android:id="@+id/how_to_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/regin_popu_list_iten_selector"
        android:clickable="true"
        >
        <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/home_menu_usage"
		    android:textSize="@dimen/regin_popu_list_text_size"
		    android:textColor="@android:color/black"
		    android:layout_marginLeft="14dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:layout_marginRight="40dp"/>
        	
   	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/service_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/regin_popu_list_iten_selector"
        android:clickable="true"
        >
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/regin_login_service_terms"
		    android:textSize="@dimen/regin_popu_list_text_size"
		    android:textColor="@android:color/black"
		    android:layout_marginLeft="14dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:layout_marginRight="40dp"/>
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/regin_popu_list_iten_selector"
        android:clickable="true"
        >
		<TextView  
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/regin_login_privacy_policy"
		    android:textSize="@dimen/regin_popu_list_text_size"
		    android:textColor="@android:color/black"
		    android:layout_marginLeft="14dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:layout_marginRight="40dp"/>
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/popu_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/regin_popu_list_iten_selector"
        android:clickable="true"
        >
		
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/home_menu_help"
		    android:textSize="@dimen/regin_popu_list_text_size"
		    android:textColor="@android:color/black"
		    android:layout_marginLeft="14dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:layout_marginRight="40dp"/>
    </LinearLayout>
	
</LinearLayout>
