<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">
    <LinearLayout 
        android:id="@+id/no_wish_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="60dp"
        	android:orientation="vertical">
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center">
	            <ImageView 
	                android:layout_width="100dp"
	                android:layout_height="100dp"
	                android:scaleType="centerCrop"
	                android:src="@drawable/widget_fav"/>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:gravity="center">
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/wish_list_activity_start_search"
	                android:textSize="30sp"
	                android:textColor="@color/wish_list_title_text_color_gray"/>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:orientation="vertical"
	            android:gravity="center">
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/wish_list_activity_content_text_1"
	                android:textSize="18sp"
	                android:textColor="@color/wish_list_content_text_color"/>
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/wish_list_activity_content_text_2"
	                android:textSize="18sp"
	                android:textColor="@color/wish_list_content_text_color"/>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:orientation="vertical"
	            android:gravity="center">
	            <LinearLayout 
	                android:id="@+id/create_wish_list"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/wish_list_fragment_create_wishlist_text_selector"
	            	android:clickable="true">
	                <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/wish_list_activity_create_list"
		                android:textSize="18sp"
		                android:layout_margin="6dp"
		                android:textColor="@color/wish_list_content_text_color_red"/>
	            </LinearLayout>
	
	        </LinearLayout>
	        
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/has_wish_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView 
            android:id="@+id/banner_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/a7"/>
        <ListView 
            android:id="@+id/wish_time_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:divider="@null"> 
        </ListView>
        
    </LinearLayout>

</FrameLayout>
