<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/home_menu_bg">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_activity_text_margin_left"
            android:layout_marginTop="@dimen/home_activity_title_margin_top"
            android:layout_marginBottom="@dimen/home_activity_title_margin_botton"
            android:text="@string/home_menu_go"
            android:textColor="@color/home_menu_title_text_color"
            android:textSize="@dimen/home_activity_title_text_size"/>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/home_menu_divider_color"
            android:layout_marginLeft="@dimen/home_activity_text_margin_left"
            android:layout_marginRight="@dimen/home_activity_text_margin_left">
            
        </LinearLayout>        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">    
        
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1">
	        
            <ScrollView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"            
				android:scrollbars="none">
                <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

	                <LinearLayout 
	                    android:id="@+id/menu_seek"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/menu_item_selector_bg_to_gray"
	                    android:clickable="true" >
	                    <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/home_menu_seek"
	                        android:textColor="@color/home_menu_text_color_red"
	                        android:textSize="@dimen/home_activity_item_text_size"
	                        android:layout_marginLeft="@dimen/home_activity_text_margin_left"
	                        android:layout_marginTop="@dimen/home_activity_text_margin_top"
	                        android:layout_marginBottom="@dimen/home_activity_text_margin_top"/>
	                    
	                </LinearLayout>
	                
	                <LinearLayout 
	                    android:id="@+id/menu_discover"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/menu_item_selector_bg_to_gray"
	                    android:clickable="true" >
	                    <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/home_menu_discover"
	                        android:textColor="@color/home_menu_item_text_color"
	                        android:textSize="@dimen/home_activity_item_text_size"
	                        android:layout_marginLeft="@dimen/home_activity_text_margin_left"
	                        android:layout_marginTop="@dimen/home_activity_text_margin_top"
	                        android:layout_marginBottom="@dimen/home_activity_text_margin_top"/>
	                    
	                </LinearLayout>
	                
	                <LinearLayout 
	                    android:id="@+id/menu_usage"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/menu_item_selector_bg_to_gray"
	                    android:clickable="true" >
	                    <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/home_menu_usage"
	                        android:textColor="@color/home_menu_item_text_color"
	                        android:textSize="@dimen/home_activity_item_text_size"
	                        android:layout_marginLeft="@dimen/home_activity_text_margin_left"
	                        android:layout_marginTop="@dimen/home_activity_text_margin_top"
	                        android:layout_marginBottom="@dimen/home_activity_text_margin_top"/>
	                    
	                </LinearLayout>
	                
	                <LinearLayout 
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:orientation="vertical"
				        android:layout_marginTop="36dp">
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:layout_marginLeft="@dimen/home_activity_text_margin_left"
				            android:layout_marginTop="@dimen/home_activity_title_margin_top"
            				android:layout_marginBottom="@dimen/home_activity_title_margin_botton"
				            android:text="@string/home_menu_rentout"
				            android:textColor="@color/home_menu_title_text_color"
				            android:textSize="@dimen/home_activity_title_text_size"/>
				        
				        <LinearLayout 
				            android:layout_width="match_parent"
				            android:layout_height="1px"
				            android:background="@color/home_menu_divider_color"
				            android:layout_marginLeft="@dimen/home_activity_text_margin_left"
				            android:layout_marginRight="@dimen/home_activity_text_margin_left">
				            
				        </LinearLayout>        
				    </LinearLayout>
				    
	                <LinearLayout 
	                    android:id="@+id/menu_pub"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/menu_item_selector_bg_to_gray"
	                    android:clickable="true" >
	                    <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/home_menu_pub"
	                        android:textColor="@color/home_menu_item_text_color"
	                        android:textSize="@dimen/home_activity_item_text_size"
	                        android:layout_marginLeft="@dimen/home_activity_text_margin_left"
	                        android:layout_marginTop="@dimen/home_activity_text_margin_top"
	                        android:layout_marginBottom="@dimen/home_activity_text_margin_top"/>
	                    
	                </LinearLayout>
	                
	                <LinearLayout 
	                    android:id="@+id/menu_why_pub"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/menu_item_selector_bg_to_gray"
	                    android:clickable="true" >
	                    <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/home_menu_why_pub"
	                        android:textColor="@color/home_menu_item_text_color"
	                        android:textSize="@dimen/home_activity_item_text_size"
	                        android:layout_marginLeft="@dimen/home_activity_text_margin_left"
	                        android:layout_marginTop="@dimen/home_activity_text_margin_top"
	                        android:layout_marginBottom="@dimen/home_activity_text_margin_top"/>
	                    
	                </LinearLayout>
				    
	                <LinearLayout 
	                    android:id="@+id/menu_setting"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/menu_item_selector_bg_to_gray"
	                    android:clickable="true"
	                    android:layout_marginTop="36dp" >
	                    <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/home_menu_setting"
	                        android:textColor="@color/home_menu_item_text_color"
	                        android:textSize="@dimen/home_activity_title_text_size"
	                        android:layout_marginLeft="@dimen/home_activity_text_margin_left"
	                        android:layout_marginTop="@dimen/home_activity_text_margin_top"
	                        android:layout_marginBottom="@dimen/home_activity_text_margin_top"/>
	                    
	                </LinearLayout>
	                
	                <LinearLayout 
	                    android:id="@+id/menu_help"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/menu_item_selector_bg_to_gray"
	                    android:clickable="true">
	                    <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/home_menu_help"
	                        android:textColor="@color/home_menu_item_text_color"
	                        android:textSize="@dimen/home_activity_title_text_size"
	                        android:layout_marginLeft="@dimen/home_activity_text_margin_left"
	                        android:layout_marginTop="@dimen/home_activity_text_margin_top"
	                        android:layout_marginBottom="@dimen/home_activity_text_margin_top"/>
	                    
	                </LinearLayout>
	                
	                
                </LinearLayout>
                
                
            </ScrollView>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:orientation="vertical"
	        android:background="#FFFFFFFF">
			<LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@color/home_menu_divider_color">
	            
	        </LinearLayout>        
	        
			<LinearLayout 
			    android:id="@+id/login_btn"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/menu_item_selector_bg_to_gray"
	            android:clickable="true">
	            <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="@dimen/home_activity_text_margin_left"
		            android:layout_marginTop="16dp"
		            android:layout_marginBottom="16dp"
		            android:text="@string/home_menu_reginOrlogin"
		            android:textColor="@color/home_menu_text_color_red"
		            android:textSize="@dimen/home_activity_item_text_size"/>
	        </LinearLayout>      
	        
	
	    </LinearLayout>
    </LinearLayout>
  
</LinearLayout>
